/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.5.1/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building a CLI application.
    id 'application'
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
}

dependencies {
    // This dependency is used by the application.
    implementation 'com.thoughtworks.xstream:xstream:1.4.20'
    implementation 'com.drewnoakes:metadata-extractor:2.18.0'
    implementation 'org.swinglabs.swingx:swingx-all:1.6.5-1'
    implementation 'org.jxmapviewer:jxmapviewer2:2.6'

    // Use JUnit test framework
    testImplementation 'junit:junit:4.13.2'
}

application {
    // Define the main class for the application.
    mainClass.set('cuploader.frames.FIntro')
    applicationName = 'vicuna'
    //applicationDefaultJvmArgs = ["-XX:+IgnoreUnrecognizedVMOptions", "--add-opens", "java.desktop/java.awt=ALL-UNNAMED"]
}

java {
    // https://docs.gradle.org/current/javadoc/org/gradle/api/JavaVersion.html
    sourceCompatibility = JavaVersion.VERSION_20
    targetCompatibility = JavaVersion.VERSION_20
}

gradle.projectsEvaluated {
    tasks.withType(JavaCompile){
        options.compilerArgs << "-Xlint:unchecked"
    }
}
